crates/psychevo-cli/src/snapshots/narrow_idle_composer_without_sidebar.snap
---
source: crates/psychevo-cli/src/tui.rs
expression: combined
---
fixture=narrow_idle_composer_without_sidebar
size=80x20

--- text ---















────────────────────────────────────────────────────────────────────────────────
│ Ask pevo...
│
│
mock/model  high

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────
[cyan]│[dim] Ask pevo...[default]
[cyan]│[default]
[cyan]│[default]
[default]mock/model  [magenta]high[default]
