crates/psychevo-cli/src/snapshots/reasoning_suppresses_failure_meta.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 667
expression: combined
---
fixture=reasoning_suppresses_failure_meta
size=120x18

--- text ---
• Ran command                                                                                                        0s
  └ failed

◦ Thinking                                                                                                           0s
  └ The current time is approximately 15:20 UTC. Let me compose the full report now. I have all 10 stories and their
comments.

    Let me compose this carefully.







────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...
mock/model  high  • 0s · Esc  ~/work

--- styles ---
[red]• Ran command[default]                                                                                                        [dim]0s[default]
[dim]  └ [red]failed[default]
[default]
[cyan]◦ [paper]Thinking[default]                                                                                                           [dim]0s[default]
[dim]  └ The current time is approximately 15:20 UTC. Let me compose the full report now. I have all 10 stories and their[default]
[dim]comments.[default]
[dim]    [default]
[dim]    Let me compose this carefully.[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]mock/model  [magenta]high[default]  [cyan]•[default] [dim]0s · [cyan]Esc[default]  [dim]~/work[default]
