crates/psychevo-cli/src/snapshots/rich_markdown_answer.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=rich_markdown_answer
size=120x24

--- text ---
› Render a markdown answer.

# Rendering pass

• Keep ledger rhythm
• Style inline code

  fn render() {}

See crates/psychevo-cli/src/tui/render/transcript.rs:42.










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
› Ask pevo...

mock/model  high  ~/work · main

--- styles ---
[dim]› [default]Render a markdown answer.
[default]
[default]# Rendering pass
[default]
[dim]• [default]Keep ledger rhythm
[dim]• [default]Style [cyan]inline code[default]
[default]
[dim]  [cyan]fn render() {}[default]
[default]
[default]See [cyan]crates/psychevo-cli/src/tui/render/transcript.rs:42[default].
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
