crates/psychevo-cli/src/snapshots/running_turn_with_visible_thinking.snap
---
source: crates/psychevo-cli/src/tui.rs
expression: combined
---
fixture=running_turn_with_visible_thinking
size=120x24

--- text ---
▌ Prompt                                                                      │▌ Session
▌ Inspect the CLI rendering path.                                             │session: 12345678
                                                                              │source: tui
▌ Thinking                                                                    │
▌ Read the TUI renderer and identify stable evidence blocks.                  │▌ Context
                                                                              │workdir: /repo/psychevo
▌ Explored crates/psychevo-cli/src/tui.rs                                     │branch: main
▌ running                                                                     │model: mock/mock-model
                                                                              │variant: high
                                                                              │mode: build
                                                                              │thinking: on
                                                                              │messages: 2
                                                                              │tools: 1
                                                                              │
                                                                              │▌ Modified Files
                                                                              │M crates/psychevo-cli/src/tui.rs
                                                                              │?? specs/210-pevo-tui/testing.md
                                                                              │
──────────────────────────────────────────────────────────────────────────────│▌ Footer
│ build                                                                       │local facts only
│ Ask pevo...                                                                 │
│                                                                             │
pevo  idle  build  mock/model  12345678  thinking=on  Ctrl+T                  │
Enter submit  Ctrl+J newline  Tab mode  Ctrl+B sidebar  /help                 │

--- styles ---
[cyan]▌ Prompt[default]                                                                      │[magenta]▌ Session[default]
[cyan]▌ [default]Inspect the CLI rendering path.                                             │session: 12345678
[default]                                                                              │source: tui
[dim]▌ Thinking[default]                                                                    │
[dim]▌ Read the TUI renderer and identify stable evidence blocks.[default]                  │[cyan]▌ Context[default]
[default]                                                                              │workdir: /repo/psychevo
[cyan]▌ Explored crates/psychevo-cli/src/tui.rs[default]                                     │branch: main
[cyan]▌ [default]running                                                                     │model: mock/mock-model
[default]                                                                              │variant: high
[default]                                                                              │mode: build
[default]                                                                              │thinking: on
[default]                                                                              │messages: 2
[default]                                                                              │tools: 1
[default]                                                                              │
[default]                                                                              │[cyan]▌ Modified Files[default]
[default]                                                                              │M crates/psychevo-cli/src/tui.rs
[default]                                                                              │?? specs/210-pevo-tui/testing.md
[default]                                                                              │
[default]──────────────────────────────────────────────────────────────────────────────│[cyan]▌ Footer[default]
[cyan]│[default] build                                                                       │local facts only
[cyan]│[dim] Ask pevo...[default]                                                                 │
[cyan]│[default]                                                                             │
[magenta]pevo[default]  idle  build  mock/model  12345678  thinking=on  Ctrl+T                  │
[dim]Enter submit  Ctrl+J newline  Tab mode  Ctrl+B sidebar  /help                 [default]│
