crates/psychevo-cli/src/snapshots/session_bottom_panel.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=session_bottom_panel
size=120x24

--- text ---






────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Active Sessions                                                                                                  esc
  Search
  2026-05-06
  › ● Implement model picker  mock/mock-model  messages=5                                                        12:10
  2026-05-05
  Review session pane  mock/other-model  messages=3                                                          09:44

  Enter switch  Tab archived  Ctrl+K manage  Esc close  Type search







mock/model  high  ~/work · main

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]
[default]  [dim]Active Sessions[default]                                                                                                  [dim]esc[default]
[default]  [dim]Search [default]
[default]  [cyan]2026-05-06[default]
[default]  [cyan]› ● Implement model picker  mock/mock-model  messages=5                                                        12:10[default]
[default]  [cyan]2026-05-05[default]
[default]  Review session pane  mock/other-model  messages=3                                                          09:44
[default]
[default]  [dim]Enter switch  Tab archived  Ctrl+K manage  Esc close  Type search[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
