crates/psychevo-cli/src/snapshots/session_bottom_panel_background_running.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=session_bottom_panel_background_running
size=120x24

--- text ---






────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Active Sessions                                                                                                  esc
  Search
  repo
  › ● Implement model picker  /repo  mock/mock-model  messages=5                                      2026-05-06 12:10
  ⠼ Review session pane  /repo  mock/other-model  messages=3                                        2026-05-05 09:44

  Enter switch  Tab archived  Ctrl+K manage  Esc close  Type search








mock/model  high  ~/work · main

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]
[default]  [dim]Active Sessions[default]                                                                                                  [dim]esc[default]
[default]  [dim]Search [default]
[default]  [cyan]repo[default]
[default]  [cyan]› ● Implement model picker  /repo  mock/mock-model  messages=5                                      2026-05-06 12:10[default]
[default]  ⠼ Review session pane  /repo  mock/other-model  messages=3                                        2026-05-05 09:44
[default]
[default]  [dim]Enter switch  Tab archived  Ctrl+K manage  Esc close  Type search[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
