crates/psychevo-cli/src/snapshots/slash_menu_prefix_filtering.snap
---
source: crates/psychevo-cli/src/tui.rs
assertion_line: 5997
expression: combined
---
fixture=slash_menu_prefix_filtering
size=120x24

--- text ---
















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
│ commands
│> /model  select model
│  /mode  show current mode
│
› /mo

mock/model  high

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]│ commands
[default]│[cyan]> /model[dim]  select model[default]
[default]│[cyan]  /mode[dim]  show current mode[default]
[default]│
[dim]›[default] /mo
[default]
[default]mock/model  [magenta]high[default]
