crates/psychevo-cli/src/snapshots/variant_bottom_panel.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
assertion_line: 341
expression: combined
---
fixture=variant_bottom_panel
size=120x24

--- text ---






────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  Select Variant for mock/other-model                                                                              esc
  Search
  › ◆ Config default  configured default: high
  none  suppress provider reasoning field
  minimal  smallest reasoning request
  low  lighter reasoning
  medium  balanced reasoning
  high  deeper reasoning
  xhigh  extra high reasoning
  max  maximum configured reasoning

  Enter select  Esc back  Type search



mock/mock-model  default

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[default]
[default]  [dim]Select Variant for mock/other-model[default]                                                                              [dim]esc[default]
[default]  [dim]Search [default]
[default]  [cyan]› ◆ Config default  configured default: high[default]
[default]  none  suppress provider reasoning field
[default]  minimal  smallest reasoning request
[default]  low  lighter reasoning
[default]  medium  balanced reasoning
[default]  high  deeper reasoning
[default]  xhigh  extra high reasoning
[default]  max  maximum configured reasoning
[default]
[default]  [dim]Enter select  Esc back  Type search[default]
[default]
[default]
[default]
[default]mock/mock-model  [magenta]default[default]
