crates/psychevo-cli/src/snapshots/wide_idle_minimal_chrome.snap
---
source: crates/psychevo-cli/src/tui.rs
expression: combined
---
fixture=wide_idle_minimal_chrome
size=120x24

--- text ---



















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
│ Ask pevo...
│
│
mock/model  high

--- styles ---
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[cyan]│[dim] Ask pevo...[default]
[cyan]│[default]
[cyan]│[default]
[default]mock/model  [magenta]high[default]
