crates/psychevo-cli/src/snapshots/wide_optional_sidebar.snap
---
source: crates/psychevo-cli/src/tui/tests/fixtures.rs
expression: combined
---
fixture=wide_optional_sidebar
size=120x24

--- text ---
                                                                              Review sidebar polish
                                                                              session: 12345678

                                                                              Modified Files
                                                                              M crates/psychevo-cli/src/tui.rs
                                                                              ?? specs/210-pevo-tui/testing.md














──────────────────────────────────────────────────────────────────────────────
› Ask pevo...

mock/model  high  ~/work · main

--- styles ---
[default]                                                                              Review sidebar polish
[default]                                                                              session: 12345678
[default]
[default]                                                                              Modified Files
[default]                                                                              M crates/psychevo-cli/src/tui.rs
[default]                                                                              ?? specs/210-pevo-tui/testing.md
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]
[default]──────────────────────────────────────────────────────────────────────────────
[dim]›[default] [dim]Ask pevo...[default]
[default]
[default]mock/model  [magenta]high[default]  [dim]~/work · main[default]
